--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/redux": "3.6.0",
     "axios": "^1.3.5",
     "react": "^17",
+    "react-alice-carousel": "^2.7.1",
     "react-dom": "^17",
     "react-redux": "7.2.5",
     "react-router-dom": "6",
